# ComponentBench

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/agents/: __init__.py  codex_agent.py  holo2_agent.py  mai_ui_agent.py  openai_agent.py  pixel_agent_base.py  ui_tars_agent.py
benchmark/core/: __init__.py  difficulty_audit.py  loader.py  runner.py  task.py  types.py
benchmark/utils/: __init__.py  grid_overlay.py
configs/: config.yaml
configs/agents/: browser_use_gemini.yaml  claude.yaml  codex.yaml  gemini.yaml  gpt.yaml  gpt_openrouter.yaml  holo2.yaml  mai_ui.yaml  openrouter.yaml  qwen.yaml  ui_tars.yaml
configs/benchmark/: componentbench.yaml
configs/environment/: default.yaml
configs/observation/: ax_tree.yaml  ax_tree_legacy.yaml  pixel.yaml  set_of_marks.yaml
data/human_traces/: v1_reference.jsonl  (+1 more)
docs/: EXPERIMENT_RUNBOOK.md  PIXEL_MODELS_RUNBOOK.md  REALIZED_AUDIT.md  benchmark_versioning.md  experiment_plan.md  human_recording.md  observation_modes.md  scene_factor_analysis.md  task_templates.csv
prompts/: layer2_task_analysis.md  layer3_component_report.md
scripts/: clean_traces.py  difficulty_analysis.py  eval_axtree.sh  eval_browser_use.sh  eval_pixel.sh  eval_som.sh  merge_shards.py  preflight_check.py  run_benchmark.py  validate_tasks.py
site/: .env.example  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
tests/: test_action_parsing.py  test_componentbench_pipeline.py  test_pixel_parsers.py  test_realized_audit_smoke.py  test_resume_integrity.py
(+4175 files in other folders)
