[project]
name = "componentbench"
version = "0.1.0"
description = "ComponentBench: diagnostic benchmark for computer-use agents"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  # Upstream dependency (keep BrowserGym default behavior; do not vendor)
  "browsergym==0.13.3",

  # Config/launch (OpenApps-style)
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",

  # Agent + vision utilities
  "openai>=1.0.0",
  "numpy>=1.26.0",
  "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.3.2",
  "ruff>=0.6.0",
]
browser-use = [
  "browser-use==0.12.1",
  "google-genai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Top-level packages to ship.
packages = ["benchmark/agents", "benchmark/core", "benchmark/utils"]
include = []


